# digraph

./: Cargo.toml  README.md
examples/: ascii.rs  ascii_from_file.rs  from_file.rs  png.rs  svg.rs
src/: accumulate.rs  digraph.rs  error.rs  lib.rs  normalize.rs  palette.rs  render.rs
src/render/: ascii.rs  image_png.rs  mod.rs  png.rs  raster.rs  svg.rs
tests/: fixtures.rs  normalize_scale.rs  png_output.rs  serde_roundtrip.rs  svg_output.rs
tests/data/: lore.txt
