[package]
name = "digraph"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Byte-pair (digraph) histograms for binary visualization"
license = "MIT OR Apache-2.0"

[features]
default = []
image = ["dep:image"]
svg = []
serde = ["dep:serde"]

[dependencies]
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[[example]]
name = "from_file"
path = "examples/from_file.rs"
required-features = ["image"]
