[package]
name = "digraph"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Byte-pair (digraph) histograms for binary visualization"

[features]
default = []
image = ["dep:image"]
svg = []
serde = ["dep:serde"]

[dependencies]
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[[example]]
name = "png"
path = "examples/png.rs"
required-features = ["image"]

[[example]]
name = "ascii"
path = "examples/ascii.rs"

[[example]]
name = "svg"
path = "examples/svg.rs"
required-features = ["svg"]
